# ChangeLog for x11-libs/gtk+
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/gtk+/ChangeLog,v 1.514 2011/06/16 11:07:26 nirbheek Exp $

  16 Jun 2011; Nirbheek Chauhan <nirbheek@gentoo.org> gtk+-2.24.5.ebuild:
  Fix bug 371907 by creating m4, and passing the appropriate AT_M4DIR

*gtk+-2.24.5 (16 Jun 2011)

  16 Jun 2011; Nirbheek Chauhan <nirbheek@gentoo.org> -gtk+-2.24.3.ebuild,
  +gtk+-2.24.5.ebuild:
  Bump to 2.24.5, remove old

  11 Jun 2011; Nirbheek Chauhan <nirbheek@gentoo.org> gtk+-3.0.11.ebuild:
  Use xz tarballs

*gtk+-3.0.11 (11 Jun 2011)

  11 Jun 2011; Nirbheek Chauhan <nirbheek@gentoo.org> -gtk+-3.0.9.ebuild,
  +gtk+-3.0.11.ebuild:
  Bump to 3.0.11, remove old

*gtk+-2.24.4 (03 Jun 2011)

  03 Jun 2011; Pacho Ramos <pacho@gentoo.org> -files/gtk+-2.8.0-multilib.patch,
  -files/gtk+-2.18.5-macosx-aqua.patch,
  -files/gtk+-2.18.9-notifications-gtkentry.patch, -gtk+-2.20.1-r1.ebuild,
  -files/gtk+-2.20.1-GtkOffscreenWindow.patch,
  -files/gtk+-2.20.1-darwin8.patch, -files/gtk+-2.20.1-gail_cell_type.patch,
  -files/gtk+-2.20.1-gtkrange.patch,
  -files/gtk+-2.20.1-libpixbufloader-warning.patch,
  -files/gtk+-2.20.1-libpng-fix.patch, +gtk+-2.24.4.ebuild,
  +files/gtk+-2.24.4-old-icons.patch:
  Version bump as upstream bug #646609 is not a regression over 2.24.3 and
  doesn't look to be a major problem. Remove old.

*gtk+-3.0.10 (02 Jun 2011)

  02 Jun 2011; Nirbheek Chauhan <nirbheek@gentoo.org> -gtk+-3.0.8.ebuild,
  +gtk+-3.0.10.ebuild:
  Bump to 3.0.10

  20 May 2011; Fabian Groffen <grobian@gentoo.org> gtk+-3.0.9.ebuild:
  Drop comments about broken *-macos support, since that works for a while

  29 Apr 2011; Nirbheek Chauhan <nirbheek@gentoo.org> gtk+-3.0.8.ebuild,
  gtk+-3.0.9.ebuild:
  Add cairo[glib] dependency according to bug 365159

  29 Apr 2011; Jeroen Roovers <jer@gentoo.org> gtk+-3.0.9.ebuild:
  Marked ~hppa (bug #364693).
